# opengl-formation

./: CMakeLists.txt  build.bat  configure.bat  run.bat
include/glad/: glad.h
src/: index-buffer.cpp  index-buffer.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  vertex-array.cpp  vertex-buffer.cpp  vertex-buffer.h
src/glad/: glad.c
src/header/: index-buffer.h  renderer.h  shader.h  texture.h  vertex-array.h  vertex-buffer.h
src/shader/: basic-shader.shader
